--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="styles/g3_architects.css">
 </head>
 <body class="work-sans-font">
-    <!-- navbar & banner section -->
+    <!-- navbar & banner part -->
     <header class="bg-light">
+        <!-- navbar section -->
         <nav class="navbar display-flex">
             <h3 class="brand">G3 Architects</h3>
             <ul class="nav-links display-flex">
@@ -18,6 +19,7 @@
                 <li class="nav-item"><a href="" class="nav-link text-gray">Login</a></li>
             </ul>
         </nav>
+        <!-- banner section -->
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Brand New Group of Architects</h1>
@@ -27,8 +29,51 @@
             <img class="banner-image" src="images/banner.png" alt="G3 Architects Team">
         </div>
     </header>
+    <!-- team, features & facts part -->
     <main>
-
+        <!-- team & features section -->
+        <section class="teams display-flex">
+            <div class="team-img-container">
+                <img src="images/team1.png" alt="Two Team Members Are Discussing About A Project">
+                <img src="images/team2.png" alt="Three Team Members Are Posing For Promotion">
+                <img src="images/team3.png" alt="Two Team Members Are Discussing About A Project">
+                <img src="images/team4.png" alt="Two Team Members Are Discussing About A Project">
+            </div>
+            <div class="our-features">
+                <h3 class="section-title"><span id="quick-list" class="text-light-gray">Quick list</span> <span>of Our</span> <span class="orange">Features</span></h3>
+                <p class="feature-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <!-- lovable & enjoyable features section -->
+         <section></section>
+         <!-- facts section -->
+          <section class="some-facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="fact-container">
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+            </div>
+          </section>
     </main>
     <footer>
 
