facts and sponsors sections are completed and made quite responsive as well

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img class="banner-image" src="images/banner.png" alt="G3 Architects Team">
         </div>
     </header>
-    <!-- team, features & facts part -->
+    <!-- team, features, facts & sponsors part -->
     <main>
         <!-- team & features section -->
         <section class="teams display-flex">
@@ -46,34 +46,56 @@
             </div>
         </section>
         <!-- lovable & enjoyable features section -->
-         <section></section>
-         <!-- facts section -->
-          <section class="some-facts">
+        <section></section>
+        <!-- facts section -->
+        <section class="some-facts">
             <h3 class="section-title">Some Facts</h3>
-            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
-            <div class="fact-container">
-                <div class="fact">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+            <p class="fact-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts-container">
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="Ribon Icon" class="fact-icon">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name text-light-gray">Awards Winnings</h5>
+                    </div>
                 </div>
-                <div class="fact">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="Projects Icon" class="fact-icon">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name text-light-gray">Project Finished</h5>
+                    </div>
                 </div>
-                <div class="fact">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="Customers Icon" class="fact-icon">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name text-light-gray">Clients Worked</h5>
+                    </div>
                 </div>
-                <div class="fact">
-                    <img src="" alt="" class="fact-icon">
-                    <h4 class="fact-number"></h4>
-                    <h5 class="fact-name"></h5>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/email.png" alt="Email Icon" class="fact-icon">
+                        <h4 class="fact-number">22578</h4>
+                        <h5 class="fact-name text-light-gray">Email Send</h5>
+                    </div>
                 </div>
             </div>
-          </section>
+        </section>
+        <!-- sponsors section -->
+        <section class="our-sponsors">
+            <div class="sponsors-info">
+                <h3 class="section-title">Our Sponspors</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-companies">
+                <img src="images/sponsors/spotify.png" alt="Spotify Logo">
+                <img src="images/sponsors/amazon.png" alt="Amazon Logo">
+                <img src="images/sponsors/google.png" alt="Google Logo">
+                <img src="images/sponsors/telerama.png" alt="Telerama Logo">
+                <img src="images/sponsors/figma.png" alt="Figma Logo">
+            </div>
+        </section>
     </main>
     <footer>
 
