--- a/index.html
+++ b/index.html
@@ -46,7 +46,38 @@
             </div>
         </section>
         <!-- lovable & enjoyable features section -->
-        <section></section>
+        <section class="features display-flex">
+            <div class="featured-text">
+                <h3 id="feature-section-title" class="section-title">Features you will<br>love & enjoy</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <!-- feature-card container starts -->
+                <div class="feature-card">
+                    <h4 class="feature-title">Desktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised.</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Drag & Drop Builder</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised.</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Awesome Modern Design</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised.</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Super Easy to Edit</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised.</p>
+                </div>
+                <!-- feature-card container ends -->
+            </div>
+            <div class="featured-architect">
+                <img src="images/architect.png" alt="An Architect Lady">
+                <button id="experience-badge" class="btn-primary">
+                    <span id="experience-years">10+ Years</span>
+                    <br>
+                    <span id="experience">Experience</span>
+                </button>
+            </div>
+        </section>
         <!-- facts section -->
         <section class="some-facts">
             <h3 class="section-title">Some Facts</h3>
