footer section is completed and by it our project has been completed

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </section>
         <!-- lovable & enjoyable features section -->
         <section class="features display-flex">
-            <div class="featured-text">
+            <div>
                 <h3 id="feature-section-title" class="section-title">Features you will<br>love & enjoy</h3>
                 <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <!-- feature-card container starts -->
@@ -128,8 +128,9 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <!-- copyright part -->
+    <footer class="bg-light display-flex copyright">
+        <p><small>All rights reserved copyright@2023 startup landing page design</small></p>
     </footer>
 </body>
 </html>
